minor fix plausible script

--- a/index.html
+++ b/index.html
@@ -4,20 +4,8 @@
     <!-- Plausible snippets -->
     <script
       defer
-      data-domain="shelll.it"
-      src="https://plausible.io/js/script.js"
-    ></script>
-
-    <script
-      defer
-      data-domain="shelll.it"
-      src="https://plausible.io/js/script.outbound-links.js"
-    ></script>
-
-    <script
-      defer
-      data-domain="shelll.it"
-      src="https://plausible.io/js/script.tagged-events.js"
+      data-domain="pazoo.co"
+      src="https://plausible.io/js/script.outbound-links.tagged-events.js"
     ></script>
     <!-- End of Plausible snippets -->
 
