minor adjustment autocomplete off

--- a/index.html
+++ b/index.html
@@ -85,7 +85,12 @@
 
       <div class="main-area">
         <div id="text-container">
-          <input type="text" id="password" placeholder="Your weak password.." />
+          <input
+            type="text"
+            id="password"
+            autocomplete="off"
+            placeholder="Your weak password.."
+          />
 
           <div id="btn-copy" class="plausible-event-name=ManualCopy">
             <img id="copy-img" src="img/copy.svg" />
